--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<link rel="stylesheet" href="vendor/bootstrap-grid.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
-	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="./postcss/main.min.css">
 </head>
 
 
@@ -69,14 +69,14 @@
 
 			<main id="primary" class="site-main" role="main">
 				<section class="section-increase-income" aria-labelledby="increase-income">
-	<h2 class="visually-hidden" id="increase-income">Зарабатывай больше вместе с электровелосипедами от компании АИСТ!</h2>
+	<h2 class="visually-hidden" id="increase-income">Зарабатывай больше вместе с электровелосипедами от компании АиСТ!</h2>
 	<div class="container">
 		<div class="increase">
 			<div class="increase-tile">
 				<div class="increase-tile_header">
 					<div class="section-title">
 						Зарабатывай больше
-						вместе с электровелосипедами от компании <span class="color-accent">АИСТ</span>!
+						вместе с электровелосипедами от компании <span class="color-accent">АиСТ</span>!
 					</div>
 					<p>
 						Быстрее доставил — <span class="color-accent">больше</span> заработал! Крути не сам, вези груз
@@ -102,7 +102,7 @@
 	<div class="container">
 		<div class="section-title">Парк электровелосипедов</div>
 		<div class="monsters-park">
-			<div class="row g-lg-5 g-md-3">
+			<div class="row g-lg-35 g-md-3">
 				<!-- 1 -->
 				<div class="col-sm-6 col-md-4">
 					<div class="monsters-card">
@@ -176,7 +176,7 @@
 					<!-- item title -->
 					<div class="helps_col-item col-item-0">
 						<div class="section-title">
-							Как АИСТ помогает курьерам
+							Как АиСТ помогает курьерам
 							<div class="accent-rects">
 								<span class="accent-rects_left">зарабатывать</span>
 								<span class="accent-rects_right">больше :</span>
@@ -752,9 +752,11 @@
 </section>
 
 				<section class="section-map">
-	<h2 class="visually-hidden">Место положения магазина АИСТ !</h2>
+	<h2 class="section-title">Место положение компании в Санкт-Петербург</h2>
 
-	<iframe class="section-map_iframe" src="https://yandex.ru/map-widget/v1/?ll=37.6173,55.7558&mode=poi&z=10"></iframe>
+	<div class="section-map_iframe" style="position: relative; overflow: hidden">
+		<a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color: #eee; font-size: 12px; position: absolute; top: 0px">Санкт‑Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/house/prospekt_marshala_zhukova_26_16v/Z0kYdARkTUADQFtjfXR0eH1kYg==/?ll=30.234636%2C59.859001&source=serp_navig&utm_medium=mapframe&utm_source=maps&z=18" style="color: #eee; font-size: 12px; position: absolute; top: 14px">Яндекс Карты — транспорт, навигация, поиск мест</a><iframe src="https://yandex.ru/map-widget/v1/?ll=30.234636%2C59.859001&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzQxOTc0MRJi0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0L_RgNC-0YHQv9C10LrRgiDQnNCw0YDRiNCw0LvQsCDQltGD0LrQvtCy0LAsIDI2LzE20JIiCg0r4PFBFcxvb0I%2C&source=serp_navig&z=18" frameborder="1" allowfullscreen="true" style="position: relative"></iframe>
+	</div>
 </section>
 
 			</main>
