--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 					<!-- item title -->
 					<div class="helps_col-item col-item-0">
 						<div class="section-title">
-							Как АиСТ помогает курьерам
+							Как <span class="color-accent">АиСТ</span> помогает курьерам
 							<div class="accent-rects">
 								<span class="accent-rects_left">зарабатывать</span>
 								<span class="accent-rects_right">больше :</span>
@@ -462,15 +462,15 @@
 					<div class="bike-park_full">
 						<div class="bike-park_tile tile-1">
 							<h3 class="tile-accent">Monster truck</h3>
-							<p class="tile-desc">2 аккамулятора или 1 увеличенный</p>
+							<p class="tile-desc">2 аккумулятора или 1 увеличенный</p>
 						</div>
 						<div class="bike-park_tile tile-2">
 							<h3 class="tile-accent">Monster Liming</h3>
-							<p class="tile-desc">2 аккамулятора</p>
+							<p class="tile-desc">2 аккумулятора</p>
 						</div>
 						<div class="bike-park_tile tile-3">
 							<h3 class="tile-accent">Monster Non Stop</h3>
-							<p class="tile-desc">2 аккамулятора</p>
+							<p class="tile-desc">2 аккумулятора</p>
 						</div>
 					</div>
 				</div>
